<resources>

    <string name="app_name">Friends Circle</string>
    <string name="version">Version</string>

    <string name="please_wait">Please wait</string>
    <string name="out_of_scope_functionalities">Feature planned for upcoming release!</string>

    <!-- Contextual Descriptions -->
    <string name="splash_image">splash image</string>
    <string name="go_back_to_previous_page">Go back to previous page</string>
    <string name="add_a_new_post_to_timeline">Add a new post to timeline</string>
    <string name="action_icon_left">Action icon left</string>
    <string name="clear_selected_media">Clear selected media</string>
    <string name="new_post_media_preview">New post media preview</string>
    <string name="user_profile_image">User profile Image</string>

    <!-- Server Strings -->
    <string name="server_not_reachable">Server not reachable</string>
    <string name="server_connection_error">Cannot connect to server!</string>
    <string name="error_while_processing">Error while processing</string>
    <string name="no_data_found">No data found</string>
    <string name="no_internet_error">You do not have internet access</string>

    <!-- Form Validations -->
    <string name="empty">""</string>
    <string name="invalid_email">Enter valid email address</string>
    <string name="invalid_password_general">Enter valid password</string>
    <string name="invalid_data">Please enter valid data</string>
    <string name="invalid_f_name">Enter a valid first name</string>
    <string name="invalid_l_name">Enter a valid last name</string>
    <string name="invalid_user_name">Email doesn\'t matching criteria</string>
    <string name="invalid_password">Password doesn\'t match general criteria</string>
    <string name="invalid_conf_password">Passwords doesn\'t match</string>

    <!-- Exceptions -->
    <string name="error_general">Error while processing</string>
    <string name="invalid_toast_msg">Invalid Toast Message</string>
    <string name="general_user_error">Something went wrong, please try again later!</string>
    <string name="login_failed">Login failed for credentials, try again!</string>
    <string name="registration_failed">Registration failed, try again!</string>
    <string name="logout_failed">Unable to logout, try again later!</string>

    <!-- Firebase Exceptions -->
    <string name="email_password_error">Invalid username or password</string>
    <string name="user_already_exists">Email address is already registered</string>

    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="login">Login</string>
    <string name="signup_with">Or Signup with</string>
    <string name="google">Google</string>
    <string name="facebook">Facebook</string>
    <string name="new_here">New here?</string>
    <string name="signup">Signup!</string>

    <string name="new_account">New\nAccount !!</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="enter_email_hint">Enter your email</string>
    <string name="hint_create_password">Create password</string>
    <string name="hint_confirm_password">Confirm password</string>
    <string name="register">Register</string>

    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="logout">Log out</string>
    <string name="edit">Edit</string>

    <string name="new_post">New Post</string>
    <string name="share_your_thoughts">Share your thoughts…</string>
    <string name="post">Post</string>
    <string name="maybe_next_time">May be next time \ud83d\ude07</string>
    <string name="posted_to_timeline_success">Posted to your timeline… Yayy!</string>
    <string name="posting_to_timeline_info">Posting to your timeline, Check notification bar for progress!</string>
    <string name="post_failed_try_again">Post failed, Try again!</string>
    <string name="post_upload">Post Upload</string>
    <string name="posting_to_your_timeline">Posting to your timeline…</string>
    <string name="open_posts_for_user">Open posts for user</string>

    <string name="joined">Joined</string>

</resources>