<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <import type="com.dxp.micircle.utils.Validator" />

        <variable
            name="viewModel"
            type="com.dxp.micircle.presentation.startup.registration.RegistrationViewModel" />

    </data>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".presentation.startup.registration.RegistrationActivity">

            <ImageView
                android:id="@+id/back_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="30dp"
                android:layout_marginStart="30dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="30dp"
                android:layout_marginBottom="30dp"
                android:contentDescription="@string/go_back_to_previous_page"
                android:onClick="@{() -> viewModel.onBackPressed()}"
                android:src="@drawable/ic_action_back"
                app:tint="@color/action_iv_color" />

            <TextView
                android:id="@+id/app_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="40dp"
                android:layout_marginBottom="10dp"
                android:padding="20dp"
                android:text="@string/app_name"
                android:textColor="?attr/text_color_inverted"
                android:textSize="40sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/app_name"
                android:layout_centerInParent="true"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="2">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:lineSpacingExtra="8dp"
                        android:padding="30dp"
                        android:text="@string/new_account"
                        android:textColor="?attr/text_color_inverted"
                        android:textSize="24sp"
                        android:textStyle="bold" />

                    <com.google.android.material.imageview.ShapeableImageView
                        style="@style/CircleImageView"
                        android:layout_width="0dp"
                        android:layout_height="70dp"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:onClick="@{() -> viewModel.postMessage(@string/out_of_scope_functionalities)}"
                        android:src="@mipmap/ic_launcher" />

                </LinearLayout>

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:id="@+id/forms_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="20dp">

                    <androidx.appcompat.widget.LinearLayoutCompat
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="5dp"
                        android:layout_weight="2"
                        android:orientation="horizontal">

                        <com.google.android.material.textfield.TextInputLayout
                            android:id="@+id/f_name_til"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="10dp"
                            android:layout_weight="1"
                            app:setError="@{viewModel.formsErrorLd[`fName`] != null ? context.getString(viewModel.formsErrorLd[`fName`]) : ``}"
                            app:errorEnabled="true"
                            app:hintAnimationEnabled="true"
                            app:hintEnabled="true"
                            app:hintTextColor="@color/md_grey_500">

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/f_name_et"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:afterTextChanged="@{(text) -> viewModel.setFieldError(`fName`, -1)}"
                                android:hint="@string/first_name"
                                android:imeOptions="actionNext"
                                android:importantForAutofill="yesExcludeDescendants"
                                android:inputType="textPersonName"
                                android:maxLines="1"
                                android:paddingStart="10dp"
                                android:paddingEnd="10dp"
                                android:selectAllOnFocus="true" />

                        </com.google.android.material.textfield.TextInputLayout>

                        <com.google.android.material.textfield.TextInputLayout
                            android:id="@+id/l_name_til"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="10dp"
                            android:layout_weight="1"
                            app:setError="@{viewModel.formsErrorLd[`lName`] != null ? context.getString(viewModel.formsErrorLd[`lName`]) : ``}"
                            app:errorEnabled="true"
                            app:hintAnimationEnabled="true"
                            app:hintEnabled="true"
                            app:hintTextColor="@color/md_grey_500">

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/l_name_et"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:afterTextChanged="@{(text) -> viewModel.setFieldError(`lName`, -1)}"
                                android:hint="@string/last_name"
                                android:imeOptions="actionNext"
                                android:importantForAutofill="yesExcludeDescendants"
                                android:inputType="textPersonName"
                                android:maxLines="1"
                                android:paddingStart="10dp"
                                android:paddingEnd="10dp"
                                android:selectAllOnFocus="true" />

                        </com.google.android.material.textfield.TextInputLayout>

                    </androidx.appcompat.widget.LinearLayoutCompat>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/u_name_til"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="5dp"
                        app:errorEnabled="true"
                        app:setError="@{viewModel.formsErrorLd[`username`] != null ? context.getString(viewModel.formsErrorLd[`username`]) : ``}"
                        app:hintAnimationEnabled="true"
                        app:hintEnabled="true"
                        app:hintTextColor="@color/md_grey_500">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/u_name_et"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:afterTextChanged="@{(text) -> viewModel.setFieldError(`username`, -1)}"
                            android:hint="@string/enter_email_hint"
                            android:imeOptions="actionNext"
                            android:importantForAutofill="yesExcludeDescendants"
                            android:inputType="textEmailAddress"
                            android:maxLines="1"
                            android:paddingStart="10dp"
                            android:paddingEnd="10dp"
                            android:selectAllOnFocus="true" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/password_til"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="5dp"
                        app:errorEnabled="true"
                        app:setError="@{viewModel.formsErrorLd[`password`] != null ? context.getString(viewModel.formsErrorLd[`password`]) : ``}"
                        app:hintAnimationEnabled="true"
                        app:hintEnabled="true"
                        app:hintTextColor="@color/md_grey_500"
                        app:passwordToggleEnabled="true"
                        app:startIconTint="@color/md_blue_400">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/password_et"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:afterTextChanged="@{(text) -> viewModel.setFieldError(`password`, -1)}"
                            android:hint="@string/hint_create_password"
                            android:imeOptions="actionNext"
                            android:inputType="textPassword"
                            android:maxLines="1"
                            android:paddingStart="10dp"
                            android:paddingEnd="10dp"
                            android:selectAllOnFocus="true" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/conf_password_til"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:errorEnabled="true"
                        app:setError="@{viewModel.formsErrorLd[`confPassword`] != null ? context.getString(viewModel.formsErrorLd[`confPassword`]) : ``}"
                        app:hintAnimationEnabled="true"
                        app:hintEnabled="true"
                        app:hintTextColor="@color/md_grey_500"
                        app:passwordToggleEnabled="true"
                        app:startIconTint="@color/md_blue_400">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/conf_password_et"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:afterTextChanged="@{(text) -> viewModel.setFieldError(`confPassword`, -1)}"
                            android:onEditorAction="@{(view, actionId, event) -> viewModel.initiateRegistration(fNameEt.getText().toString(), lNameEt.getText().toString(), uNameEt.getText().toString(), passwordEt.getText().toString(), confPasswordEt.getText().toString())}"
                            android:hint="@string/hint_confirm_password"
                            android:imeOptions="actionDone"
                            android:inputType="textPassword"
                            android:maxLines="1"
                            android:paddingStart="10dp"
                            android:paddingEnd="10dp"
                            android:selectAllOnFocus="true" />

                    </com.google.android.material.textfield.TextInputLayout>

                </androidx.appcompat.widget.LinearLayoutCompat>

                <Button
                    android:id="@+id/signin_btn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="100dp"
                    android:layout_marginEnd="24dp"
                    android:minHeight="60dp"
                    android:onClick="@{() -> viewModel.initiateRegistration(fNameEt.getText().toString(), lNameEt.getText().toString(), uNameEt.getText().toString(), passwordEt.getText().toString(), confPasswordEt.getText().toString())}"
                    android:text="@string/login"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    app:backgroundTint="@color/md_light_green_500"
                    app:cornerRadius="10dp"
                    app:elevation="5dp" />

            </LinearLayout>

            <ProgressBar
                android:id="@+id/progress_bar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:visibility="@{viewModel.viewRefreshState}" />

        </RelativeLayout>

    </androidx.core.widget.NestedScrollView>

</layout>